# Effective-Modern-Cpp

./: .gitignore
es/: CMakeLists.txt  README.md  compiladores.txt
es/Item01_Entendiendo_la_deduccion_de_tipo_de_una_plantilla/: CMakeLists.txt  README.md  caso1_const.cpp  caso1_no_const.cpp  caso1_puntero.cpp  caso2_uref.cpp  caso3_paso_por_valor.cpp  pizca_de_seudocodigo.cpp
